#58 Fixed ugly url. Only one trac environment.

--- a/apache2/ssl.conf
+++ b/apache2/ssl.conf
@@ -1,6 +1,5 @@
-Alias "/" "/var/trac"
 <VirtualHost _default_:80>
-    RedirectPermanent / https://%{SERVER_NAME}/trac
+    RedirectPermanent / https://%{SERVER_NAME}
 </virtualhost>
 <VirtualHost _default_>
     DocumentRoot "/var/trac"
