--- a/apache2/trac.conf
+++ b/apache2/trac.conf
@@ -3,5 +3,6 @@
     PythonInterpreter main_interpreter
     PythonHandler trac.web.modpython_frontend
     PythonOption PYTHON_EGG_CACHE /tmp/python_egg_cache
-    PythonOption TracEnvParentDir /var/trac/
+    PythonOption TracEnv /var/trac
+    PythonOption TracUriRoot /
 </Location>
