--- a/apache2/ssl.conf
+++ b/apache2/ssl.conf
@@ -1,9 +1,19 @@
 <VirtualHost _default_:80>
-    RedirectPermanent / https://%{SERVER_NAME}
+    RedirectPermanent / https://%{SERVER_NAME}/trac
 </virtualhost>
+
 <VirtualHost _default_>
-    DocumentRoot "/var/trac"
+
+    DocumentRoot "/var/www/html"
     SSLEngine on
     SSLCertificateFile /etc/ssl/certs/trac.crt
     SSLCertificateKeyFile /etc/ssl/private/trac.key
+
+    Alias /awstatsclasses "/usr/share/awstats/lib/"
+    Alias /awstats-icon "/usr/share/awstats/icon/"
+    Alias /awstatscss "/usr/share/doc/awstats/examples/css"
+    ScriptAlias /awstats/ /usr/lib/cgi-bin/
+    Options +ExecCGI -MultiViews
+
 </VirtualHost>
+
