--- a/apache2/trac.conf
+++ b/apache2/trac.conf
@@ -1,8 +1,13 @@
 <Location />
+Order Allow,Deny
+Allow from all
+</location>
+
+<Location /trac>
     SetHandler mod_python
     PythonInterpreter main_interpreter
     PythonHandler trac.web.modpython_frontend
     PythonOption PYTHON_EGG_CACHE /tmp/python_egg_cache
     PythonOption TracEnv /var/trac
-    PythonOption TracUriRoot /
+    PythonOption TracUriRoot /trac
 </Location>
