awstats and fix too layers problem

--- a/apache2/ssl.conf
+++ b/apache2/ssl.conf
@@ -1,5 +1,5 @@
 <VirtualHost _default_:80>
-    RedirectPermanent / https://%{SERVER_NAME}/trac
+    RedirectPermanent / https://localhost/trac
 </virtualhost>
 
 <VirtualHost _default_>
